--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "firebase": "^12.8.0",
     "framer-motion": "^12.26.1",
     "lucide-react": "^0.562.0",
     "react": "^19.1.1",
