--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@formspree/react": "^3.0.0",
     "@tailwindcss/vite": "^4.1.16",
     "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.1",
     "framer-motion": "^12.26.1",
     "lucide-react": "^0.562.0",
     "prop-types": "^15.8.1",
